# inspect-tinker-bridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: coding_task.py  eval_aime2025.py  simple_math_task.py  train_aime2025.py  train_example.py  train_multiturn.py
src/inspect_tinker_bridge/: __init__.py  dataset.py  env.py  ground_truth.py  loader.py  rollout_saving.py  sandbox.py  scoring.py  tasks.py  types.py  utils.py
tests/: conftest.py  test_env.py  test_rollout_saving.py  test_scoring.py  test_tasks.py  test_utils.py
